edición alt imagen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="form-body">
     <div class="login-box">
-      <img src="img/LogoSample_ByTailorBrands.jpg" class="avatar" alt="Avatar Image">
+      <img src="img/LogoSample_ByTailorBrands.jpg" class="avatar" alt="Logo">
       <h1>Iniciar sesión</h1>
       <form>   
         <input type="text" placeholder="Usuario">
