Se inicia la pagina de administrador

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="CSS/style.css">
   <title>Salyos</title>
 </head>
-<body>
+<body class="body1">
   <div class="form-body">
     <div class="login-box">
       <img src="img/LogoSample_ByTailorBrands.jpg" class="avatar" alt="Logo">
