--- a/vistaAdmin.html
+++ b/vistaAdmin.html
@@ -15,7 +15,7 @@
         <div class="col-sm-2 mb-3 mb-sm-0">
           <div class="card">
             <div class="card-body">
-                <img class="card-img-top" src="IMG/pngwing.com.png" alt="">
+                <img class="card-img-top" src="IMG/user.png" alt="">
               <h5 class="card-title">Maria</h5>
               <a href="#" class="btn btn-primary">Editar</a>
               <a href="#" class="btn btn-primary">Eliminar</a>
