--- a/vistaAdmin.html
+++ b/vistaAdmin.html
@@ -1,52 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="CSS/style.css">
     <title>Document</title>
 </head>
+
 <body class="body1">
     <div class="box"></div>
-
+<div class="container">
+    <h1 class="h3 p-2 mb-2 fw-normal">Administrar usuarios</h1>
     <div class="row">
         <div class="col-sm-2 mb-3 mb-sm-0">
-          <div class="card">
-            <div class="card-body">
-                <img class="card-img-top" src="IMG/user.png" alt="">
-              <h5 class="card-title">Maria</h5>
-              <a href="#" class="btn btn-primary">Editar</a>
-              <a href="#" class="btn btn-primary">Eliminar</a>
+            <div class="card">
+                <div class="card-body">
+                    <img class="card-img-top" src="IMG/user.png" alt="">
+                    <h5 class="card-title">Maria</h5>
+                    <a href="#" class="btn btn-dark btn-rounded">Editar</a>
+                    <a href="#" class="btn btn-dark btn-rounded">Eliminar</a>
+                </div>
             </div>
-          </div>
         </div>
-    <div>
-        <h3>Pedro</h3>
-        <button>Editar</button>
-        <button>Eliminar</button>
+        <div class="col-sm-2 mb-3 mb-sm-0">
+            <div class="card">
+                <div class="card-body">
+                    <img class="card-img-top" src="IMG/user.png" alt="">
+                    <h5 class="card-title">Mariangel</h5>
+                    <a href="#" class="btn btn-dark btn-rounded">Editar</a>
+                    <a href="#" class="btn btn-dark btn-rounded">Eliminar</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-2 mb-3 mb-sm-0">
+            <div class="card">
+                <div class="card-body">
+                    <img class="card-img-top" src="IMG/user.png" alt="">
+                    <h5 class="card-title">Pedro</h5>
+                    <a href="#" class="btn btn-dark btn-rounded">Editar</a>
+                    <a href="#" class="btn btn-dark btn-rounded">Eliminar</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-2 mb-3 mb-sm-0">
+            <div class="card">
+                <div class="card-body">
+                    <img class="card-img-top" src="IMG/user.png" alt="">
+                    <h5 class="card-title">Pedro</h5>
+                    <a href="#" class="btn btn-dark btn-rounded">Editar</a>
+                    <a href="#" class="btn btn-dark btn-rounded">Eliminar</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+        <div class="col-sm-2 mb-3 mb-sm-0">
+            <div class="card">
+                <div class="card-body">
+                    <img class="card-img-top" src="IMG/user.png" alt="">
+                    <h5 class="card-title">Pedro</h5>
+                    <a href="#" class="btn btn-dark btn-rounded">Editar</a>
+                    <a href="#" class="btn btn-dark btn-rounded">Eliminar</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-2 mb-3 mb-sm-0">
+            <div class="card">
+                <div class="card-body">
+                    <img class="card-img-top" src="IMG/user.png" alt="">
+                    <h5 class="card-title">Pedro</h5>
+                    <a href="#" class="btn btn-dark btn-rounded">Editar</a>
+                    <a href="#" class="btn btn-dark btn-rounded">Eliminar</a>
+                </div>
+            </div>
+        </div> 
     </div>
-    <div>
-        <h3>Mariangela</h3>
-        <button>Editar</button>
-        <button>Eliminar</button></div>
-    <div>
-        <h3>Luis</h3>
-        <button>Editar</button>
-        <button>Eliminar</button>
-    </div>
-    <div>
-        <h3>Carmen</h3>
-        <button>Editar</button>
-        <button>Eliminar</button>
-    </div>
-    <div>
-        <h3>Mario</h3>
-        <button>Editar</button>
-        <button>Eliminar</button>
-    </div>
-    <div></div>
-    <div></div>
+</div>
 </body>
+
 </html>
